# cpp_npy

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: Descriptor.hpp  Primitives.hpp  StructDescriptor.hpp  fields.hpp  npy.hpp  npy_types.hpp
src/: StructDescriptor.cpp  fields.cpp  npy.cpp
tests/: test.cpp  test.py
